discussion/kv_engine/130003/130003_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

Install memcached wrapper script

Change-Id: Ic21ecd54bd5956bb325d0d596a25cf91c0313eb2

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2020-06-08 09:07:32.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-06-08 09:19:30.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24449/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24449/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4032/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3990/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3990/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4116/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4116/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11865/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11865/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28422/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28422/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2624/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/tests/testapp/testapp.cc:676:14: error: use of undeclared identifier "argc"; did you mean "arg"? [clang-diagnostic-error]
        argv[argc++] = const_cast<char*>("./memcached.bin");
             ^~~~
             arg
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/tests/testapp/testapp.cc:654:13: note: "arg" declared here
        int arg = 0;
            ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2624/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/tests/testapp/testapp.cc:676:14:
error: use of undeclared identifier "argc"; did you mean "arg"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2624/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3096/ : FAILURE

Compile error at [2020-06-08T09:09:55.010Z] ../kv_engine/tests/testapp/testapp.cc:676:14:
error: use of undeclared identifier "argc"; did you mean "arg"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3096/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/1128/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
